--- a/app/views/salesforce/index.html.erb
+++ b/app/views/salesforce/index.html.erb
@@ -1,1 +1,16 @@
-<h1>SALESFORCE</h1>
+<h1><%= @current_client.FirstName__c %>'s Salesforce Record</h1>
+
+<table>
+	<tbody>
+		<% @current_client.each do |key, value| %>
+		   <%  unless ['attributes', 'Name'].include?( key ) %>
+				<tr>
+					<td> <%= key.sub '__c', '' %> </td> 
+					<td> <%= value %> </td>
+				</tr>
+			<% end %>
+		<% end %>
+	</tbody>
+</table>
+
+
